| Summary: | ASTERISK-27783: res_pjsip_pubsub: apparent crash on shutdown | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | pjsip |
| Date Opened: | 2018-03-29 15:44:46 | Date Closed: | 2018-07-03 08:33:43 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_pubsub |
| Versions: | 13.20.0 15.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) asterisk_event_devicestate.tar.gz ( 1) backtrace_3678.txt | |
| Description: | Jenkins reported a crash in res_pjsip_pubsub when running the following testsuite test against Asterisk 15 ([464|https://jenkins2.asterisk.org/job/gate-ast-15-pjsip/464/]):
{noformat} Running ['./lib/python/asterisk/test_runner.py', 'tests/channels/pjsip/publish/asterisk_event_devicestate'] ... [Mar 29 14:05:20] WARNING[11434]: asterisk:244 errReceived: Asterisk 127.0.0.2 received error: FRACK!, Failed assertion bad magic number 0x0 for object 0xa1d7444 (0) at line 3275 in pubsub_on_rx_publish_request of res_pjsip_pubsub.c Core dumps detected; failing test {noformat} It appears it is happening during shutdown. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2018-07-03 08:33:43.855-0500 Change 9319 merged by Jenkins2: res_pjsip_pubsub: Hold module reference for publications. [https://gerrit.asterisk.org/9319|https://gerrit.asterisk.org/9319] By: Friendly Automation (friendly-automation) 2018-07-03 08:35:03.685-0500 Change 9318 merged by Jenkins2: res_pjsip_pubsub: Hold module reference for publications. [https://gerrit.asterisk.org/9318|https://gerrit.asterisk.org/9318] By: Friendly Automation (friendly-automation) 2018-07-03 08:41:54.466-0500 Change 9320 merged by Jenkins2: res_pjsip_pubsub: Hold module reference for publications. [https://gerrit.asterisk.org/9320|https://gerrit.asterisk.org/9320] | ||